--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
     "url": "https://t.me/battle_niki_bot/battle_niki",
     "name": "BATTLE NIKI",
-    "iconUrl": "https://ton.vote/logo.png"
+    "iconUrl": "https://github.com/soyll/BATTLE-NIKI/blob/main/logo.jpg?raw=true"
 }
