--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://t.me/battle_niki_bot/battle_niki",
-    "name": "BATTLE NIKI",
-    "iconUrl": "https://github.com/soyll/BATTLE-NIKI/blob/main/logo.jpg?raw=true"
+    "url": "https://t.me/battle_test_bot_bot/battle",
+    "name": "BATTLE",
+    "iconUrl": "https://github.com/soyll/BATTLE/blob/main/logo.jpg?raw=true"
 }
