--- a/niki-manifest.json
+++ b/niki-manifest.json
@@ -1,1 +1,5 @@
-
+{
+    "url": "https://t.me/battle_niki_bot/battle",
+    "name": "BATTLE NIKI",
+    "iconUrl": "https://github.com/soyll/BATTLE/blob/main/logo.jpg?raw=true"
+}
