--- a/niki-manifest.json
+++ b/niki-manifest.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://battle-niki-game-3debcaa95f88.herokuapp.com/",
+    "url": "https://t.me/battle_niki_bot/battle",
     "name": "BATTLE NIKI",
     "iconUrl": "https://github.com/soyll/BATTLE/blob/main/logo.jpg?raw=true"
 }
